cmake_minimum_required(VERSION 3.21)
project(test)

set(CMAKE_CXX_STANDARD 14)
add_executable(test main.cpp struct.cpp header/base.h newAndDelete.cpp vector.cpp Candy.cpp 循环&关系表达式/express.cpp 循环&关系表达式/bigstep.cpp 循环&关系表达式/forstring.cpp 循环&关系表达式/plus_one.cpp 循环&关系表达式/forstr2.cpp 循环&关系表达式/block.cpp 循环&关系表达式/comparestr1.cpp 循环&关系表达式/comparestr2.cpp 循环&关系表达式/while.cpp 循环&关系表达式/waiting.cpp 循环&关系表达式/time.cpp 循环&关系表达式/textin1.cpp 循环&关系表达式/textin2.cpp 循环&关系表达式/textin3.cpp)
