cmake_minimum_required(VERSION 3.21)
project(test)

set(CMAKE_CXX_STANDARD 14)
add_executable(test main.cpp struct.cpp header/base.h newAndDelete.cpp vector.cpp Candy.cpp 循环&关系表达式/express.cpp 循环&关系表达式/bigstep.cpp 循环&关系表达式/forstring.cpp 循环&关系表达式/plus_one.cpp 循环&关系表达式/forstr2.cpp 循环&关系表达式/block.cpp 循环&关系表达式/comparestr1.cpp 循环&关系表达式/comparestr2.cpp 循环&关系表达式/while.cpp 循环&关系表达式/waiting.cpp 循环&关系表达式/time.cpp 循环&关系表达式/textin1.cpp 循环&关系表达式/textin2.cpp 循环&关系表达式/textin3.cpp 循环&关系表达式/textin4.cpp 循环&关系表达式/nested.cpp 循环&关系表达式/练习/Test01.cpp 循环&关系表达式/练习/Test02.cpp 分支语句&逻辑运算符/if.cpp 分支语句&逻辑运算符/ifelseif.cpp 分支语句&逻辑运算符/ifelseif.cpp 分支语句&逻辑运算符/logicOr.cpp 分支语句&逻辑运算符/logicAnd.cpp 分支语句&逻辑运算符/logicNot.cpp 分支语句&逻辑运算符/cctypes.cpp 分支语句&逻辑运算符/switch.cpp 分支语句&逻辑运算符/enum.cpp 分支语句&逻辑运算符/cinfish.cpp)
